# mit805-17017590

./: .gitignore  README.md
python/: MIT805_Assignment_2.ipynb  download_ds.py  inventory_size.py  map_reduce.py  post_processing.py  pyproject.toml
